--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -2,9 +2,11 @@
     position: relative;
     width: 100%;
     height: 223px;
-    margin-bottom: 2rem;
+    margin-bottom: 32px;
     border-radius: 25px;
     overflow: hidden;
+    max-width: 1300px;
+    margin: 32px auto;
   
     &__image {
       width: 100%;
@@ -23,10 +25,10 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 2rem;
+      font-size: 32px;
       font-weight: bold;
       text-align: center;
-      padding: 0 1rem;
+      padding: 0 8px;
     }
   }
 
@@ -35,8 +37,8 @@
       height: 150px;
   
       &__overlay {
-        font-size: 1.2rem;
-        padding: 0 0.5rem;
+        font-size: 19rem;
+        padding: 0 4px;
       }
     }
   }
