police d'ecriture et logo

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -48,7 +48,7 @@
       }
   
       &__cards {
-        grid-template-columns: 1fr; // 1 carte par ligne
+        grid-template-columns: 1fr;
         padding: 2rem 1rem;
       }
     }
