--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #ffffff;
-  }
-  
+  margin: 0;
+  background-color: #ffffff;
+  font-family: 'Montserrat', sans-serif;
+}
+
   
